tests/lean/isDefEqOffsetBug.lean.expected.out
isDefEqOffsetBug.lean:19:2-19:7: error: type mismatch
  rfl
has type
  ?m = ?m : Prop
but is expected to have type
  0 + 0 = 0 : Prop
